--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,12 @@
-/* ============= GLOBAL CSS =============== */
+/**
+ * ============= GLOBAL CSS ===============
+ *
+ * @format
+ */
+
+/* fonts */
+
+@import url("https://fonts.googleapis.com/css2?family=Karla:wght@500;700;800&family=Nunito+Sans:wght@300;500;700;900&display=swap");
 
 *,
 ::after,
@@ -14,40 +22,36 @@ html {
 
 :root {
   /* colors */
-  --primary-100: #d1fae5;
-  --primary-200: #a7f3d0;
-  --primary-300: #6ee7b7;
-  --primary-400: #34d399;
-  --primary-500: #10b981;
-  --primary-600: #059669;
-  --primary-700: #047857;
-  --primary-800: #065f46;
-  --primary-900: #064e3b;
+  --primary-100: #fce3d0;
+  --primary-200: #f8c7a0;
+  --primary-300: #f5aa71;
+  --primary-400: #f18e41;
+  --primary-500: #ee7212;
+  --primary-600: #be5b0e;
+  --primary-700: #8f440b;
+  --primary-800: #5f2e07;
+  --primary-900: #301704;
 
   /* grey */
-  --grey-50: #f8fafc;
-  --grey-100: #f1f5f9;
-  --grey-200: #e2e8f0;
-  --grey-300: #cbd5e1;
-  --grey-400: #94a3b8;
-  --grey-500: #64748b;
-  --grey-600: #475569;
-  --grey-700: #334155;
-  --grey-800: #1e293b;
+  --grey-50: #ebebeb;
+  --grey-100: #d6d6d6;
+  --grey-200: #858585;
+  --grey-300: #5c5c5c;
+  --grey-400: #333333;
+  --grey-500: #292929;
+  --grey-600: #1f1f1f;
+  --grey-700: #141414;
+  --grey-800: #0a0a0a;
   --grey-900: #0f172a;
   /* rest of the colors */
   --black: #222;
   --white: #fff;
-  --red-light: #f8d7da;
-  --red-dark: #842029;
-  --green-light: #d1e7dd;
-  --green-dark: #0f5132;
 
   --small-text: 0.875rem;
   --extra-small-text: 0.7em;
   /* rest of the vars */
   --backgroundColor: var(--grey-50);
-  --textColor: var(--grey-900);
+  --textColor: var(--grey-500);
   --borderRadius: 0.25rem;
   --letterSpacing: 1px;
   --transition: 0.3s ease-in-out all;
@@ -66,12 +70,10 @@ html {
 
 body {
   background: var(--backgroundColor);
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: "Nunito Sans", sans-serif;
   font-weight: 400;
   line-height: 1;
   color: var(--textColor);
-background-color: red;
 }
 p {
   margin: 0;
@@ -82,10 +84,9 @@ h3,
 h4,
 h5 {
   margin: 0;
-  font-family: var(--headingFont);
-  font-weight: 400;
+  font-family: "Karla", sans-serif;
+  font-weight: 500;
   line-height: 1;
-  text-transform: capitalize;
   letter-spacing: var(--letterSpacing);
 }
 
@@ -144,6 +145,7 @@ small,
 a {
   text-decoration: none;
 }
+
 ul {
   list-style-type: none;
   padding: 0;
