Partially done with Navbar

--- a/src/index.css
+++ b/src/index.css
@@ -55,7 +55,8 @@ html {
   --borderRadius: 0.25rem;
   --letterSpacing: 1px;
   --transition: 0.3s ease-in-out all;
-  --max-width: 1120px;
+  --max-width-1: 1350px;
+  --max-width-2: 1200px;
   --fixed-width: 600px;
   --view-width: 90vw;
   /* box shadow*/
@@ -284,7 +285,8 @@ PROJECT CSS
 */
 .page {
   width: var(--view-width);
-  max-width: var(--max-width);
+  max-width: var(--max-width-2);
   margin: 0 auto;
   padding: 5rem 2rem;
+  min-height: 80vh;
 }
