--- a/src/index.css
+++ b/src/index.css
@@ -113,11 +113,11 @@ h5 {
 }
 
 /* BIGGER FONTS */
-/* h1 {
+h1 {
   font-size: clamp(3rem, 6vw, 6rem);
 }
 
-h2 {
+/* h2 {
   font-size: clamp(2.5rem, 5vw, 5rem);
 }
 
@@ -131,8 +131,8 @@ h4 {
 
 h5 {
   font-size: clamp(1rem, 2vw, 2rem);
-}
- */
+} */
+
 
 .text {
   margin-bottom: 1.5rem;
@@ -285,6 +285,34 @@ svg {
   width: 100%;
   height: auto;
 }
+
+
+/* hero title */
+
+.hero-title{
+  max-width: 992px;
+}
+
+.hero-title h1{
+ line-height: 1.3
+}
+
+.hero-title h4{
+  line-height: 1.4
+}
+
+@media screen and (min-width: 992px) {
+  .hero-title{
+    margin: 0 auto;
+    max-width: 1120px;
+  }
+
+  @media screen and (min-width: 1550px) {
+    .hero-title{
+      max-width: 1200px;
+    }
+  }
+}
 /* 
 ============= 
 PROJECT CSS
@@ -385,5 +413,6 @@ PROJECT CSS
     font-size: 6rem;
   }
 }
+
 
 
