--- a/src/index.css
+++ b/src/index.css
@@ -55,9 +55,9 @@ html {
   --borderRadius: 0.25rem;
   --letterSpacing: 1px;
   --transition: 0.3s ease-in-out all;
-  --max-width-1: 1350px;
-  --max-width-2: 1200px;
-  --max-width-3: 1512px;
+  --max-width-1: 1024px;
+  --max-width-2: 1216px;
+  --max-width-3: 1408px;
   --fixed-width: 600px;
   --view-width: 90vw;
   /* box shadow*/
@@ -132,7 +132,6 @@ h4 {
 h5 {
   font-size: clamp(1rem, 2vw, 2rem);
 } */
-
 
 .text {
   margin-bottom: 1.5rem;
@@ -267,18 +266,102 @@ ul {
 
 /* title */
 
-.title {
-  font-size: clamp(2rem, 10vw, 6rem);
-  line-height: 1.2;
-  max-width: 992px;;
+@media screen and (min-width: 992px) {
+  .hero-title {
+    margin: 0 auto;
+    max-width: 1120px;
+  }
+
+  @media screen and (min-width: 1550px) {
+    .hero-title {
+      max-width: 1200px;
+    }
+  }
 }
 
-.title-underline {
-  background: var(--primary-500);
-  width: 4rem;
-  height: 0.25rem;
+/*=================
+===================
+SECTION AND TITLES
+===================
+=================== */
+
+.section {
   margin: 0 auto;
-  margin-top: 1rem;
+  padding: 2rem 0;
+}
+
+.section-center {
+  width: var(--view-width);
+  margin: 0 auto;
+  /* background: rgba(255, 0, 0, .1); */
+}
+
+/* titles */
+.section-title h1 {
+  line-height: 1.3;
+}
+
+.section-title h3, h4, h5{
+  line-height: 1.5;
+}
+
+@media screen and (min-width: 768px) {
+  .section {
+    padding: 3rem 0;
+  }
+
+  .section-center {
+    width: 80vw;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .section {
+    padding: 3rem 0;
+  }
+
+  .section-center {
+    width: var(--view-width);
+    max-width: var(--max-width-1);
+  }
+
+  /* section-title */
+  .section-title {
+    max-width: 85%;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+
+  .section{
+    padding: 5rem 0;
+  }
+  .section-center {
+    max-width: var(--max-width-2);
+  }
+}
+
+@media screen and (min-width: 1550px) {
+  .section-center {
+    max-width: var(--max-width-3);
+  }
+}
+
+/*=================
+===================
+HEADINGS, SUBHEADINGS, TEXT
+===================
+=================== */
+
+/*=================
+===================
+MISCALLANEOUS
+===================
+=================== */
+
+.orange-bold {
+  color: var(--primary-500);
+  font-weight: 900;
 }
 
 svg {
@@ -286,79 +369,7 @@ svg {
   height: auto;
 }
 
-
-/* hero title */
-
-.hero-title{
-  max-width: 992px;
-}
-
-.hero-title h1{
- line-height: 1.3
-}
-
-.hero-title h4{
-  line-height: 1.4
-}
-
-@media screen and (min-width: 992px) {
-  .hero-title{
-    margin: 0 auto;
-    max-width: 1120px;
-  }
-
-  @media screen and (min-width: 1550px) {
-    .hero-title{
-      max-width: 1200px;
-    }
-  }
-}
-/* 
-============= 
-PROJECT CSS
-=============
-*/
-
-.page {
-  /* width: var(--view-width);
-  max-width: var(--max-width-2); */
-  margin: 0 auto;
-  padding: 2rem 0rem;
-  /* min-height: 80vh; */
-}
-
-.section-center {
-  width: var(--view-width);
-  max-width: var(--max-width-2);
-  margin: 0 auto;
-  padding: 5rem 0;
-}
-
-@media screen and (min-width: 1512px) {
-  /* .page {
-    max-width: var(--max-width-1);
-  } */
-
-  .section-center {
-    max-width: var(--max-width-1);
-  }
-}
-
-@media screen and (min-width: 1650px) {
-  /* .page {
-    max-width: var(--max-width-3);
-  } */
-
-  .section-center {
-    max-width: var(--max-width-3);
-  }
-}
-
-.orange-bold {
-  color: var(--primary-500);
-  font-weight: 900;
-}
-
+/* testimonials temp needs refactor */
 /* testimonials */
 .testimonials-section {
   position: relative;
@@ -413,6 +424,4 @@ PROJECT CSS
     font-size: 6rem;
   }
 }
-
-
-
+/* testimonials temp */
