--- a/src/index.css
+++ b/src/index.css
@@ -288,6 +288,7 @@ SECTION AND TITLES
 .section {
   margin: 0 auto;
   padding: 2rem 0;
+  max-width: 1750px;
 }
 
 .section-center {
@@ -301,7 +302,7 @@ SECTION AND TITLES
   line-height: 1.3;
 }
 
-.section-title h3, h4, h5{
+.section-title h2, h3, h4, h5{
   line-height: 1.5;
 }
 
