--- a/src/index.css
+++ b/src/index.css
@@ -53,7 +53,7 @@ html {
   --backgroundColor: var(--grey-50);
   --textColor: var(--grey-500);
   --borderRadius: 0.25rem;
-  --letterSpacing: 1px;
+  --letterSpacing: .25px;
   --transition: 0.3s ease-in-out all;
   --max-width-1: 1024px;
   --max-width-2: 1216px;
